...
    <string name="reading_tts_playing">正在朗读</string>
    <string name="reading_tts_paused">已暂停</string>
    <string name="reading_tts_completed">朗读完成</string>
    <string name="reading_tts_failed">朗读中断</string>
    <string name="reading_tts_position">%1$s · 第 %2$d / %3$d 句</string>
    <string name="reading_tts_current_sentence">正在朗读第 %1$d 句</string>
    <string name="reading_tts_pause">暂停朗读</string>
    <string name="reading_tts_resume">从本句开头继续朗读</string>
    <string name="reading_tts_replay">从头重新朗读</string>
    <string name="reading_tts_previous">朗读上一句</string>
    <string name="reading_tts_next">朗读下一句</string>
    <string name="reading_tts_stop">停止朗读</string>
    <string name="reading_sentence_play">朗读</string>
    <string name="reading_sentence_play_content_description">播放当前句子语音</string>
    <string name="reading_sentence_translate">翻译</string>
...
